<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="searchTerm">Enter Search Term</string>
    <string name="search">Search</string>
    <string name="title_activity_image_display">Image Display</string>
    <string name="size">Image Size</string>
    <string name="color">Image Color</string>
    <string name="img_type">Image Type</string>
    <string name="title_activity_gimage_search_settings">GImage Settings</string>
    <string name="site_search">Site</string>
    <string name="example_site">Eg., flickr.com</string>
    
    <string-array name="imgsz">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    
    <string-array name="imgcolor">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
    <string-array name="imgtype">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="loadMore">Load More</string>
    
    
    

</resources>
