<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GImageSearchSettingsActivity" >

    <LinearLayout
        android:id="@+id/llSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/size"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spSize"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llSize"
        android:layout_below="@+id/llSize"
        android:layout_marginTop="47dp" >

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spColor"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llColor"
        android:layout_below="@+id/llColor"
        android:layout_marginTop="66dp" >

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/img_type"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llType"
        android:layout_below="@+id/llType"
        android:layout_marginTop="52dp" >

        <TextView
            android:id="@+id/tvSite"
            android:layout_width="98dp"
            android:layout_height="40dp"
            android:text="@string/site_search"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etSite"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/example_site" />
    </LinearLayout>

</RelativeLayout>