<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GImageSearchActivity" >

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etQuery"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/searchTerm" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:onClick="onGImageSearch"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSearch"
        android:layout_marginLeft="25dp"
        android:orientation="vertical" >

        <GridView
            android:id="@+id/gvImages"
            android:layout_width="wrap_content"
            android:layout_height="264dp"
            android:layout_marginTop="58dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>

    </LinearLayout>

    <Button
        android:id="@+id/btnLoadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/llSearch"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginRight="23dp"
        android:layout_marginTop="14dp"
        android:onClick="onLoadMore"
        android:text="@string/loadMore" />

</RelativeLayout>